src/matlab/parser/MatlabParser.output
Terminals unused in grammar

   TRUE
   FALSE


Grammar

    0 $accept: input $end

    1 input: matlabprogram

    2 matlabprogram: assignment
    3              | conditional
    4              | assignment matlabprogram
    5              | conditional matlabprogram

    6 conditional: IF logicalformula matlabprogram END
    7            | IF logicalformula matlabprogram ELSE matlabprogram END
    8            | IF logicalformula matlabprogram elselist END
    9            | IF logicalformula matlabprogram elselist ELSE matlabprogram END

   10 elselist: ELSEIF logicalformula matlabprogram
   11         | elselist ELSEIF logicalformula matlabprogram

   12 assignment: IDENTIFIER ASSIGN term SEMICOLON

   13 logicalformula: comparison
   14               | LPAREN logicalformula RPAREN
   15               | logicalformula AND logicalformula
   16               | logicalformula OR logicalformula
   17               | NOT logicalformula

   18 comparison: term INEQUALITY term
   19           | term EQUALS term

   20 term: NUMBER
   21     | IDENTIFIER
   22     | LPAREN term RPAREN
   23     | term PLUS term
   24     | term MINUS term
   25     | term MULTIPLY term
   26     | term DIVIDE term
   27     | term POWER term
   28     | MINUS term
   29     | matrix

   30 matrix: LEFTBRACKET rowlist RIGHTBRACKET

   31 rowlist: row
   32        | rowlist SEMICOLON row

   33 row: term
   34    | row COMMA term


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 20
IDENTIFIER (259) 12 21
PLUS (260) 23
MINUS (261) 24 28
MULTIPLY (262) 25
DIVIDE (263) 26
POWER (264) 27
INEQUALITY (265) 18
EQUALS (266) 19
LPAREN (267) 14 22
RPAREN (268) 14 22
SEMICOLON (269) 12 32
COMMA (270) 34
LEFTBRACKET (271) 30
RIGHTBRACKET (272) 30
AND (273) 15
OR (274) 16
NOT (275) 17
TRUE (276)
FALSE (277)
ELSEIF (278) 10 11
END (279) 6 7 8 9
ASSIGN (280) 12
NEGATIVE (281)
ELSE (282) 7 9
IF (283) 6 7 8 9


Nonterminals, with rules where they appear

$accept (29)
    on left: 0
input (30)
    on left: 1, on right: 0
matlabprogram (31)
    on left: 2 3 4 5, on right: 1 4 5 6 7 8 9 10 11
conditional (32)
    on left: 6 7 8 9, on right: 3 5
elselist (33)
    on left: 10 11, on right: 8 9 11
assignment (34)
    on left: 12, on right: 2 4
logicalformula (35)
    on left: 13 14 15 16 17, on right: 6 7 8 9 10 11 14 15 16 17
comparison (36)
    on left: 18 19, on right: 13
term (37)
    on left: 20 21 22 23 24 25 26 27 28 29, on right: 12 18 19 22 23
    24 25 26 27 28 33 34
matrix (38)
    on left: 30, on right: 29
rowlist (39)
    on left: 31 32, on right: 30 32
row (40)
    on left: 33 34, on right: 31 32 34


State 0

    0 $accept: . input $end
    1 input: . matlabprogram
    2 matlabprogram: . assignment
    3              | . conditional
    4              | . assignment matlabprogram
    5              | . conditional matlabprogram
    6 conditional: . IF logicalformula matlabprogram END
    7            | . IF logicalformula matlabprogram ELSE matlabprogram END
    8            | . IF logicalformula matlabprogram elselist END
    9            | . IF logicalformula matlabprogram elselist ELSE matlabprogram END
   12 assignment: . IDENTIFIER ASSIGN term SEMICOLON

    IDENTIFIER  shift, and go to state 1
    IF          shift, and go to state 2

    input          go to state 3
    matlabprogram  go to state 4
    conditional    go to state 5
    assignment     go to state 6


State 1

   12 assignment: IDENTIFIER . ASSIGN term SEMICOLON

    ASSIGN  shift, and go to state 7


State 2

    6 conditional: IF . logicalformula matlabprogram END
    7            | IF . logicalformula matlabprogram ELSE matlabprogram END
    8            | IF . logicalformula matlabprogram elselist END
    9            | IF . logicalformula matlabprogram elselist ELSE matlabprogram END
   13 logicalformula: . comparison
   14               | . LPAREN logicalformula RPAREN
   15               | . logicalformula AND logicalformula
   16               | . logicalformula OR logicalformula
   17               | . NOT logicalformula
   18 comparison: . term INEQUALITY term
   19           | . term EQUALS term
   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 11
    LEFTBRACKET  shift, and go to state 12
    NOT          shift, and go to state 13

    logicalformula  go to state 14
    comparison      go to state 15
    term            go to state 16
    matrix          go to state 17


State 3

    0 $accept: input . $end

    $end  shift, and go to state 18


State 4

    1 input: matlabprogram .

    $default  reduce using rule 1 (input)


State 5

    2 matlabprogram: . assignment
    3              | . conditional
    3              | conditional .  [$end, ELSEIF, END, ELSE]
    4              | . assignment matlabprogram
    5              | . conditional matlabprogram
    5              | conditional . matlabprogram
    6 conditional: . IF logicalformula matlabprogram END
    7            | . IF logicalformula matlabprogram ELSE matlabprogram END
    8            | . IF logicalformula matlabprogram elselist END
    9            | . IF logicalformula matlabprogram elselist ELSE matlabprogram END
   12 assignment: . IDENTIFIER ASSIGN term SEMICOLON

    IDENTIFIER  shift, and go to state 1
    IF          shift, and go to state 2

    $default  reduce using rule 3 (matlabprogram)

    matlabprogram  go to state 19
    conditional    go to state 5
    assignment     go to state 6


State 6

    2 matlabprogram: . assignment
    2              | assignment .  [$end, ELSEIF, END, ELSE]
    3              | . conditional
    4              | . assignment matlabprogram
    4              | assignment . matlabprogram
    5              | . conditional matlabprogram
    6 conditional: . IF logicalformula matlabprogram END
    7            | . IF logicalformula matlabprogram ELSE matlabprogram END
    8            | . IF logicalformula matlabprogram elselist END
    9            | . IF logicalformula matlabprogram elselist ELSE matlabprogram END
   12 assignment: . IDENTIFIER ASSIGN term SEMICOLON

    IDENTIFIER  shift, and go to state 1
    IF          shift, and go to state 2

    $default  reduce using rule 2 (matlabprogram)

    matlabprogram  go to state 20
    conditional    go to state 5
    assignment     go to state 6


State 7

   12 assignment: IDENTIFIER ASSIGN . term SEMICOLON
   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 21
    LEFTBRACKET  shift, and go to state 12

    term    go to state 22
    matrix  go to state 17


State 8

   20 term: NUMBER .

    $default  reduce using rule 20 (term)


State 9

   21 term: IDENTIFIER .

    $default  reduce using rule 21 (term)


State 10

   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   28     | MINUS . term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 21
    LEFTBRACKET  shift, and go to state 12

    term    go to state 23
    matrix  go to state 17


State 11

   13 logicalformula: . comparison
   14               | . LPAREN logicalformula RPAREN
   14               | LPAREN . logicalformula RPAREN
   15               | . logicalformula AND logicalformula
   16               | . logicalformula OR logicalformula
   17               | . NOT logicalformula
   18 comparison: . term INEQUALITY term
   19           | . term EQUALS term
   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   22     | LPAREN . term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 11
    LEFTBRACKET  shift, and go to state 12
    NOT          shift, and go to state 13

    logicalformula  go to state 24
    comparison      go to state 15
    term            go to state 25
    matrix          go to state 17


State 12

   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET
   30       | LEFTBRACKET . rowlist RIGHTBRACKET
   31 rowlist: . row
   32        | . rowlist SEMICOLON row
   33 row: . term
   34    | . row COMMA term

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 21
    LEFTBRACKET  shift, and go to state 12

    term     go to state 26
    matrix   go to state 17
    rowlist  go to state 27
    row      go to state 28


State 13

   13 logicalformula: . comparison
   14               | . LPAREN logicalformula RPAREN
   15               | . logicalformula AND logicalformula
   16               | . logicalformula OR logicalformula
   17               | . NOT logicalformula
   17               | NOT . logicalformula
   18 comparison: . term INEQUALITY term
   19           | . term EQUALS term
   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 11
    LEFTBRACKET  shift, and go to state 12
    NOT          shift, and go to state 13

    logicalformula  go to state 29
    comparison      go to state 15
    term            go to state 16
    matrix          go to state 17


State 14

    2 matlabprogram: . assignment
    3              | . conditional
    4              | . assignment matlabprogram
    5              | . conditional matlabprogram
    6 conditional: . IF logicalformula matlabprogram END
    6            | IF logicalformula . matlabprogram END
    7            | . IF logicalformula matlabprogram ELSE matlabprogram END
    7            | IF logicalformula . matlabprogram ELSE matlabprogram END
    8            | . IF logicalformula matlabprogram elselist END
    8            | IF logicalformula . matlabprogram elselist END
    9            | . IF logicalformula matlabprogram elselist ELSE matlabprogram END
    9            | IF logicalformula . matlabprogram elselist ELSE matlabprogram END
   12 assignment: . IDENTIFIER ASSIGN term SEMICOLON
   15 logicalformula: logicalformula . AND logicalformula
   16               | logicalformula . OR logicalformula

    IDENTIFIER  shift, and go to state 1
    AND         shift, and go to state 30
    OR          shift, and go to state 31
    IF          shift, and go to state 2

    matlabprogram  go to state 32
    conditional    go to state 5
    assignment     go to state 6


State 15

   13 logicalformula: comparison .

    $default  reduce using rule 13 (logicalformula)


State 16

   18 comparison: term . INEQUALITY term
   19           | term . EQUALS term
   23 term: term . PLUS term
   24     | term . MINUS term
   25     | term . MULTIPLY term
   26     | term . DIVIDE term
   27     | term . POWER term

    PLUS        shift, and go to state 33
    MINUS       shift, and go to state 34
    MULTIPLY    shift, and go to state 35
    DIVIDE      shift, and go to state 36
    POWER       shift, and go to state 37
    INEQUALITY  shift, and go to state 38
    EQUALS      shift, and go to state 39


State 17

   29 term: matrix .

    $default  reduce using rule 29 (term)


State 18

    0 $accept: input $end .

    $default  accept


State 19

    5 matlabprogram: conditional matlabprogram .

    $default  reduce using rule 5 (matlabprogram)


State 20

    4 matlabprogram: assignment matlabprogram .

    $default  reduce using rule 4 (matlabprogram)


State 21

   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   22     | LPAREN . term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 21
    LEFTBRACKET  shift, and go to state 12

    term    go to state 40
    matrix  go to state 17


State 22

   12 assignment: IDENTIFIER ASSIGN term . SEMICOLON
   23 term: term . PLUS term
   24     | term . MINUS term
   25     | term . MULTIPLY term
   26     | term . DIVIDE term
   27     | term . POWER term

    PLUS       shift, and go to state 33
    MINUS      shift, and go to state 34
    MULTIPLY   shift, and go to state 35
    DIVIDE     shift, and go to state 36
    POWER      shift, and go to state 37
    SEMICOLON  shift, and go to state 41


State 23

   23 term: term . PLUS term
   24     | term . MINUS term
   25     | term . MULTIPLY term
   26     | term . DIVIDE term
   27     | term . POWER term
   28     | MINUS term .  [IDENTIFIER, PLUS, MINUS, MULTIPLY, DIVIDE, POWER, INEQUALITY, EQUALS, RPAREN, SEMICOLON, COMMA, RIGHTBRACKET, AND, OR, IF]

    $default  reduce using rule 28 (term)

    Conflict between rule 28 and token PLUS resolved as reduce (PLUS < NEGATIVE).
    Conflict between rule 28 and token MINUS resolved as reduce (MINUS < NEGATIVE).
    Conflict between rule 28 and token MULTIPLY resolved as reduce (MULTIPLY < NEGATIVE).
    Conflict between rule 28 and token DIVIDE resolved as reduce (DIVIDE < NEGATIVE).
    Conflict between rule 28 and token POWER resolved as reduce (POWER < NEGATIVE).


State 24

   14 logicalformula: LPAREN logicalformula . RPAREN
   15               | logicalformula . AND logicalformula
   16               | logicalformula . OR logicalformula

    RPAREN  shift, and go to state 42
    AND     shift, and go to state 30
    OR      shift, and go to state 31


State 25

   18 comparison: term . INEQUALITY term
   19           | term . EQUALS term
   22 term: LPAREN term . RPAREN
   23     | term . PLUS term
   24     | term . MINUS term
   25     | term . MULTIPLY term
   26     | term . DIVIDE term
   27     | term . POWER term

    PLUS        shift, and go to state 33
    MINUS       shift, and go to state 34
    MULTIPLY    shift, and go to state 35
    DIVIDE      shift, and go to state 36
    POWER       shift, and go to state 37
    INEQUALITY  shift, and go to state 38
    EQUALS      shift, and go to state 39
    RPAREN      shift, and go to state 43


State 26

   23 term: term . PLUS term
   24     | term . MINUS term
   25     | term . MULTIPLY term
   26     | term . DIVIDE term
   27     | term . POWER term
   33 row: term .  [SEMICOLON, COMMA, RIGHTBRACKET]

    PLUS      shift, and go to state 33
    MINUS     shift, and go to state 34
    MULTIPLY  shift, and go to state 35
    DIVIDE    shift, and go to state 36
    POWER     shift, and go to state 37

    $default  reduce using rule 33 (row)


State 27

   30 matrix: LEFTBRACKET rowlist . RIGHTBRACKET
   32 rowlist: rowlist . SEMICOLON row

    SEMICOLON     shift, and go to state 44
    RIGHTBRACKET  shift, and go to state 45


State 28

   31 rowlist: row .  [SEMICOLON, RIGHTBRACKET]
   34 row: row . COMMA term

    COMMA  shift, and go to state 46

    $default  reduce using rule 31 (rowlist)


State 29

   15 logicalformula: logicalformula . AND logicalformula
   16               | logicalformula . OR logicalformula
   17               | NOT logicalformula .  [IDENTIFIER, RPAREN, AND, OR, IF]

    $default  reduce using rule 17 (logicalformula)

    Conflict between rule 17 and token AND resolved as reduce (AND < NOT).
    Conflict between rule 17 and token OR resolved as reduce (OR < NOT).


State 30

   13 logicalformula: . comparison
   14               | . LPAREN logicalformula RPAREN
   15               | . logicalformula AND logicalformula
   15               | logicalformula AND . logicalformula
   16               | . logicalformula OR logicalformula
   17               | . NOT logicalformula
   18 comparison: . term INEQUALITY term
   19           | . term EQUALS term
   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 11
    LEFTBRACKET  shift, and go to state 12
    NOT          shift, and go to state 13

    logicalformula  go to state 47
    comparison      go to state 15
    term            go to state 16
    matrix          go to state 17


State 31

   13 logicalformula: . comparison
   14               | . LPAREN logicalformula RPAREN
   15               | . logicalformula AND logicalformula
   16               | . logicalformula OR logicalformula
   16               | logicalformula OR . logicalformula
   17               | . NOT logicalformula
   18 comparison: . term INEQUALITY term
   19           | . term EQUALS term
   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 11
    LEFTBRACKET  shift, and go to state 12
    NOT          shift, and go to state 13

    logicalformula  go to state 48
    comparison      go to state 15
    term            go to state 16
    matrix          go to state 17


State 32

    6 conditional: IF logicalformula matlabprogram . END
    7            | IF logicalformula matlabprogram . ELSE matlabprogram END
    8            | IF logicalformula matlabprogram . elselist END
    9            | IF logicalformula matlabprogram . elselist ELSE matlabprogram END
   10 elselist: . ELSEIF logicalformula matlabprogram
   11         | . elselist ELSEIF logicalformula matlabprogram

    ELSEIF  shift, and go to state 49
    END     shift, and go to state 50
    ELSE    shift, and go to state 51

    elselist  go to state 52


State 33

   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   23     | term PLUS . term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 21
    LEFTBRACKET  shift, and go to state 12

    term    go to state 53
    matrix  go to state 17


State 34

   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   24     | term MINUS . term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 21
    LEFTBRACKET  shift, and go to state 12

    term    go to state 54
    matrix  go to state 17


State 35

   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   25     | term MULTIPLY . term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 21
    LEFTBRACKET  shift, and go to state 12

    term    go to state 55
    matrix  go to state 17


State 36

   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   26     | term DIVIDE . term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 21
    LEFTBRACKET  shift, and go to state 12

    term    go to state 56
    matrix  go to state 17


State 37

   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   27     | term POWER . term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 21
    LEFTBRACKET  shift, and go to state 12

    term    go to state 57
    matrix  go to state 17


State 38

   18 comparison: term INEQUALITY . term
   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 21
    LEFTBRACKET  shift, and go to state 12

    term    go to state 58
    matrix  go to state 17


State 39

   19 comparison: term EQUALS . term
   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 21
    LEFTBRACKET  shift, and go to state 12

    term    go to state 59
    matrix  go to state 17


State 40

   22 term: LPAREN term . RPAREN
   23     | term . PLUS term
   24     | term . MINUS term
   25     | term . MULTIPLY term
   26     | term . DIVIDE term
   27     | term . POWER term

    PLUS      shift, and go to state 33
    MINUS     shift, and go to state 34
    MULTIPLY  shift, and go to state 35
    DIVIDE    shift, and go to state 36
    POWER     shift, and go to state 37
    RPAREN    shift, and go to state 43


State 41

   12 assignment: IDENTIFIER ASSIGN term SEMICOLON .

    $default  reduce using rule 12 (assignment)


State 42

   14 logicalformula: LPAREN logicalformula RPAREN .

    $default  reduce using rule 14 (logicalformula)


State 43

   22 term: LPAREN term RPAREN .

    $default  reduce using rule 22 (term)


State 44

   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET
   32 rowlist: rowlist SEMICOLON . row
   33 row: . term
   34    | . row COMMA term

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 21
    LEFTBRACKET  shift, and go to state 12

    term    go to state 26
    matrix  go to state 17
    row     go to state 60


State 45

   30 matrix: LEFTBRACKET rowlist RIGHTBRACKET .

    $default  reduce using rule 30 (matrix)


State 46

   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET
   34 row: row COMMA . term

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 21
    LEFTBRACKET  shift, and go to state 12

    term    go to state 61
    matrix  go to state 17


State 47

   15 logicalformula: logicalformula . AND logicalformula
   15               | logicalformula AND logicalformula .  [IDENTIFIER, RPAREN, IF]
   16               | logicalformula . OR logicalformula

    AND  shift, and go to state 30
    OR   shift, and go to state 31

    $default  reduce using rule 15 (logicalformula)

    Conflict between rule 15 and token AND resolved as shift (%right AND).
    Conflict between rule 15 and token OR resolved as shift (%right OR).


State 48

   15 logicalformula: logicalformula . AND logicalformula
   16               | logicalformula . OR logicalformula
   16               | logicalformula OR logicalformula .  [IDENTIFIER, RPAREN, IF]

    AND  shift, and go to state 30
    OR   shift, and go to state 31

    $default  reduce using rule 16 (logicalformula)

    Conflict between rule 16 and token AND resolved as shift (%right AND).
    Conflict between rule 16 and token OR resolved as shift (%right OR).


State 49

   10 elselist: ELSEIF . logicalformula matlabprogram
   13 logicalformula: . comparison
   14               | . LPAREN logicalformula RPAREN
   15               | . logicalformula AND logicalformula
   16               | . logicalformula OR logicalformula
   17               | . NOT logicalformula
   18 comparison: . term INEQUALITY term
   19           | . term EQUALS term
   20 term: . NUMBER
   21     | . IDENTIFIER
   22     | . LPAREN term RPAREN
   23     | . term PLUS term
   24     | . term MINUS term
   25     | . term MULTIPLY term
   26     | . term DIVIDE term
   27     | . term POWER term
   28     | . MINUS term
   29     | . matrix
   30 matrix: . LEFTBRACKET rowlist RIGHTBRACKET

    NUMBER       shift, and go to state 8
    IDENTIFIER   shift, and go to state 9
    MINUS        shift, and go to state 10
    LPAREN       shift, and go to state 11
    LEFTBRACKET  shift, and go to state 12
    NOT          shift, and go to state 13

    logicalformula  go to state 62
    comparison      go to state 15
    term            go to state 16
    matrix          go to state 17


State 50

    6 conditional: IF logicalformula matlabprogram END .

    $default  reduce using rule 6 (conditional)


State 51

    2 matlabprogram: . assignment
    3              | . conditional
    4              | . assignment matlabprogram
    5              | . conditional matlabprogram
    6 conditional: . IF logicalformula matlabprogram END
    7            | . IF logicalformula matlabprogram ELSE matlabprogram END
    7            | IF logicalformula matlabprogram ELSE . matlabprogram END
    8            | . IF logicalformula matlabprogram elselist END
    9            | . IF logicalformula matlabprogram elselist ELSE matlabprogram END
   12 assignment: . IDENTIFIER ASSIGN term SEMICOLON

    IDENTIFIER  shift, and go to state 1
    IF          shift, and go to state 2

    matlabprogram  go to state 63
    conditional    go to state 5
    assignment     go to state 6


State 52

    8 conditional: IF logicalformula matlabprogram elselist . END
    9            | IF logicalformula matlabprogram elselist . ELSE matlabprogram END
   11 elselist: elselist . ELSEIF logicalformula matlabprogram

    ELSEIF  shift, and go to state 64
    END     shift, and go to state 65
    ELSE    shift, and go to state 66


State 53

   23 term: term . PLUS term
   23     | term PLUS term .  [IDENTIFIER, PLUS, MINUS, INEQUALITY, EQUALS, RPAREN, SEMICOLON, COMMA, RIGHTBRACKET, AND, OR, IF]
   24     | term . MINUS term
   25     | term . MULTIPLY term
   26     | term . DIVIDE term
   27     | term . POWER term

    MULTIPLY  shift, and go to state 35
    DIVIDE    shift, and go to state 36
    POWER     shift, and go to state 37

    $default  reduce using rule 23 (term)

    Conflict between rule 23 and token PLUS resolved as reduce (%left PLUS).
    Conflict between rule 23 and token MINUS resolved as reduce (%left MINUS).
    Conflict between rule 23 and token MULTIPLY resolved as shift (PLUS < MULTIPLY).
    Conflict between rule 23 and token DIVIDE resolved as shift (PLUS < DIVIDE).
    Conflict between rule 23 and token POWER resolved as shift (PLUS < POWER).


State 54

   23 term: term . PLUS term
   24     | term . MINUS term
   24     | term MINUS term .  [IDENTIFIER, PLUS, MINUS, INEQUALITY, EQUALS, RPAREN, SEMICOLON, COMMA, RIGHTBRACKET, AND, OR, IF]
   25     | term . MULTIPLY term
   26     | term . DIVIDE term
   27     | term . POWER term

    MULTIPLY  shift, and go to state 35
    DIVIDE    shift, and go to state 36
    POWER     shift, and go to state 37

    $default  reduce using rule 24 (term)

    Conflict between rule 24 and token PLUS resolved as reduce (%left PLUS).
    Conflict between rule 24 and token MINUS resolved as reduce (%left MINUS).
    Conflict between rule 24 and token MULTIPLY resolved as shift (MINUS < MULTIPLY).
    Conflict between rule 24 and token DIVIDE resolved as shift (MINUS < DIVIDE).
    Conflict between rule 24 and token POWER resolved as shift (MINUS < POWER).


State 55

   23 term: term . PLUS term
   24     | term . MINUS term
   25     | term . MULTIPLY term
   25     | term MULTIPLY term .  [IDENTIFIER, PLUS, MINUS, MULTIPLY, DIVIDE, INEQUALITY, EQUALS, RPAREN, SEMICOLON, COMMA, RIGHTBRACKET, AND, OR, IF]
   26     | term . DIVIDE term
   27     | term . POWER term

    POWER  shift, and go to state 37

    $default  reduce using rule 25 (term)

    Conflict between rule 25 and token PLUS resolved as reduce (PLUS < MULTIPLY).
    Conflict between rule 25 and token MINUS resolved as reduce (MINUS < MULTIPLY).
    Conflict between rule 25 and token MULTIPLY resolved as reduce (%left MULTIPLY).
    Conflict between rule 25 and token DIVIDE resolved as reduce (%left DIVIDE).
    Conflict between rule 25 and token POWER resolved as shift (MULTIPLY < POWER).


State 56

   23 term: term . PLUS term
   24     | term . MINUS term
   25     | term . MULTIPLY term
   26     | term . DIVIDE term
   26     | term DIVIDE term .  [IDENTIFIER, PLUS, MINUS, MULTIPLY, DIVIDE, INEQUALITY, EQUALS, RPAREN, SEMICOLON, COMMA, RIGHTBRACKET, AND, OR, IF]
   27     | term . POWER term

    POWER  shift, and go to state 37

    $default  reduce using rule 26 (term)

    Conflict between rule 26 and token PLUS resolved as reduce (PLUS < DIVIDE).
    Conflict between rule 26 and token MINUS resolved as reduce (MINUS < DIVIDE).
    Conflict between rule 26 and token MULTIPLY resolved as reduce (%left MULTIPLY).
    Conflict between rule 26 and token DIVIDE resolved as reduce (%left DIVIDE).
    Conflict between rule 26 and token POWER resolved as shift (DIVIDE < POWER).


State 57

   23 term: term . PLUS term
   24     | term . MINUS term
   25     | term . MULTIPLY term
   26     | term . DIVIDE term
   27     | term . POWER term
   27     | term POWER term .  [IDENTIFIER, PLUS, MINUS, MULTIPLY, DIVIDE, INEQUALITY, EQUALS, RPAREN, SEMICOLON, COMMA, RIGHTBRACKET, AND, OR, IF]

    POWER  shift, and go to state 37

    $default  reduce using rule 27 (term)
